# waferlens

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup_waferlens.sh
.github/workflows/: ci.yml
configs/: config.yaml
data/: synthetic_sample.npz
docs/: architecture.md  blog_outline.md  dataset_card_mixedwm38.md  methods.md  references.md  sample_triage_report.html
huggingface/spaces/: Dockerfile  README.md  app.py  requirements.txt
notebooks/: 00_overview.ipynb  01_data_explore.ipynb  02_train_compare.ipynb  03_triage_explain.ipynb
scripts/: deploy_space.py
src/waferlens/: __init__.py  cli.py  config.py  predict.py
src/waferlens/data/: __init__.py  dataset.py  download.py  mixedwm38.py  synthetic.py  transforms.py  wm811k.py
src/waferlens/models/: __init__.py  cnn.py  factory.py  vit.py
src/waferlens/reports/: __init__.py  triage_report.py
src/waferlens/reports/templates/: triage_report.html.j2
src/waferlens/train/: __init__.py  loop.py  metrics.py
src/waferlens/triage/: __init__.py  explain.py  rules.py
src/waferlens/ui/: __init__.py  app.py
tests/: conftest.py  test_cli.py  test_config.py  test_dataset.py  test_explain.py  test_metrics.py  test_models.py  test_predict.py  test_synthetic.py  test_transforms.py  test_triage.py
