[project]
name = "waferlens"
version = "0.1.0"
description = "Wafer-map defect-pattern classification (CNN + ViT) with rule-based FA triage"
authors = [{name = "kbd0011"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
dependencies = [
    "torch>=2.2",
    "numpy>=1.26,<2.2",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pillow>=10.3",
    "matplotlib>=3.9",
    "plotly>=5.20",
    "pyyaml>=6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "loguru>=0.7",
    "streamlit>=1.36",
    "jinja2>=3.1",
    "joblib>=1.4",
    "tqdm>=4.66",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "ipykernel>=6.29",
]
# Optional experiment tracking; pipeline degrades gracefully without it
tracking = ["mlflow>=2.14"]
# Optional Kaggle dataset download
kaggle = ["kaggle>=1.6"]

[project.scripts]
waferlens = "waferlens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waferlens"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# N806/N803: uppercase X/Y are universal ML convention.
# N814: BASE_CLASSES imported as constant. B905: zip strict not needed here.
# RUF059: unused unpacked vars are fine in tests. E702: multiple statements (terse test setup).
ignore = ["E501", "B008", "N812", "N806", "N803", "N814", "B905", "RUF059"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E702", "B017", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: long-running training tests (deselect with -m 'not slow')",
]
